--- a/GestioneCorsi/WebContent/css/all.css
+++ b/GestioneCorsi/WebContent/css/all.css
@@ -4,8 +4,8 @@ html {
 }
 
 body {
+	padding-bottom: 320px;
 	background-color: #F9F9F9;
-	padding-bottom: 0px;
 }
 
 ::-webkit-scrollbar {
@@ -36,18 +36,27 @@ body {
 footer {
 	position: absolute;
 	bottom: 0;
-	height: 350px;
+	height: 300px;
 	width: 100%;
 	background-color: #111;
 	color: white;
 }
 
-@media screen and (max-width: 740px) {
+@media screen and (max-width:469px) {
 	footer {
-		height: 480px;
+		height: 660px
 	}
 	body {
-		margin-bottom: 500px;
+		padding-bottom: 680px;
+	}
+}
+
+@media screen and (min-width:470px) and (max-width:730px) {
+	footer {
+		height: 460px
+	}
+	body {
+		padding-bottom: 480px;
 	}
 }
 
